--- a/JDanTang/JDanTang/Class/MainClass/Home/Home/View/ChoicenessCell.xib
+++ b/JDanTang/JDanTang/Class/MainClass/Home/Home/View/ChoicenessCell.xib
@@ -1,24 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="105" id="KGk-i7-Jjw" customClass="ChoicenessCell" customModule="JDanTang" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="105"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="153" id="KGk-i7-Jjw" customClass="ChoicenessCell" customModule="JDanTang" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="153"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="105"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="153"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Me_ProfileBackground" translatesAutoresizingMaskIntoConstraints="NO" id="Mb4-CU-Mcf">
+                        <rect key="frame" x="8" y="10" width="304" height="142.5"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YAe-6c-M8Y">
+                        <rect key="frame" x="10" y="130" width="300" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vkF-mC-J09">
+                        <rect key="frame" x="235" y="24" width="70" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="70" id="Atl-gL-avH"/>
+                            <constraint firstAttribute="height" constant="22" id="Wcz-83-AHz"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <state key="normal" title="0" image="baichuan_btn_favorites_selected_21x21_"/>
+                        <state key="selected" image="content-details_like_selected_16x16_"/>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="vkF-mC-J09" secondAttribute="trailing" constant="15" id="GFt-JJ-3gJ"/>
+                    <constraint firstItem="vkF-mC-J09" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="24" id="JjQ-RU-TuL"/>
+                    <constraint firstAttribute="trailing" secondItem="YAe-6c-M8Y" secondAttribute="trailing" constant="10" id="OAl-10-FRX"/>
+                    <constraint firstItem="YAe-6c-M8Y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="PC7-Vk-hC9"/>
+                    <constraint firstAttribute="bottom" secondItem="YAe-6c-M8Y" secondAttribute="bottom" constant="2" id="SgZ-ah-L9F"/>
+                    <constraint firstAttribute="bottom" secondItem="Mb4-CU-Mcf" secondAttribute="bottom" id="YDQ-rj-ToJ"/>
+                    <constraint firstItem="Mb4-CU-Mcf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ay3-Cf-8EH"/>
+                    <constraint firstAttribute="trailing" secondItem="Mb4-CU-Mcf" secondAttribute="trailing" constant="8" id="cmJ-pL-BIC"/>
+                    <constraint firstItem="Mb4-CU-Mcf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="pae-rn-oRL"/>
+                </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="34" y="84.5"/>
+            <connections>
+                <outlet property="backImageView" destination="Mb4-CU-Mcf" id="Vob-g1-NLE"/>
+                <outlet property="contentLabel" destination="YAe-6c-M8Y" id="PwF-xg-tRc"/>
+                <outlet property="likeBtn" destination="vkF-mC-J09" id="2ny-6M-J0B"/>
+            </connections>
+            <point key="canvasLocation" x="36" y="74.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Me_ProfileBackground" width="621" height="214"/>
+        <image name="baichuan_btn_favorites_selected_21x21_" width="21" height="21"/>
+        <image name="content-details_like_selected_16x16_" width="16" height="16"/>
+    </resources>
 </document>
